Contact Align - ChatBot - fix

--- a/src/app/shared/navbar/navbar.component.scss
+++ b/src/app/shared/navbar/navbar.component.scss
@@ -51,19 +51,28 @@
     position: relative;
     text-align: center;
     justify-content: center;
-    
+    height: 100%;
   }
 
   .contactIcon{
   
     //padding-right: 20%;
     width:20%;
-    margin : auto;
+    margin : 15%;
+    margin-left: 0;
+  
+   
+    text-align: center;
+    justify-content: center;
     //border-style: solid;
    // border-width: 1px;
   }
 
-  .middle{
-    padding-right: 20%;
-    padding-left:20%;
+  .icono{
+    padding-top:25px;
+    padding-bottom:25px;
+   /* margin-top:25px;
+    margin-bottom:25px;*/
   }
+
+  
